[tool.poetry]
name = "mpm"
version = "0.1.0"
description = "Music package manager"
authors = ["Abhinav Tushar <lepisma@fastmail.com>"]
license = "GPl-3.0"

[tool.poetry.dependencies]
python = "^3.6"
hy = "0.13.0"
eep = "^0.1.3"
requests = "^2.19"
pafy = "^0.5.4"
pyyaml = "^3.13"
tqdm = "^4.25"
docopt = "^0.6.2"
dataset = "^1.1"
youtube-dl = "^2018.9"
high = "0.1.1"

[tool.poetry.dev-dependencies]
pytest = "^3.8"

[tool.poetry.scripts]
mpm = "mpm.cli:cli"

[[tool.poetry.source]]
name = "personal"
url = "https://lepisma.github.io/pypi"
